[package]
name = "forge"
version = "0.1.0"
edition = "2021"
description = "Agent-oriented compute broker and workspace runtime"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
